--- a/proyects/proyect_n/proyecto_API/package.json
+++ b/proyects/proyect_n/proyecto_API/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2"
