--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/node": "^16.18.103",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "@use-gesture/react": "^10.3.1",
     "d3": "^7.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1",
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -50,6 +52,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
+    "@types/webpack-env": "^1.18.5",
     "autoprefixer": "^10.4.19",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.39",
