--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@use-gesture/react": "^10.3.1",
     "d3": "^7.9.0",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
