el sidebar se oculta y se desoculta perfectamente

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@use-gesture/react": "^10.3.1",
     "d3": "^7.9.0",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
